--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "exercises from nodeschool.io",
   "main": "/",
   "dependencies": {
-    "bl": "^1.1.2"
+    "bl": "^1.1.2",
+    "strftime": "^0.9.2"
   },
   "devDependencies": {},
   "scripts": {
@@ -12,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jangrott/nodeschool_io-exercises.git"
+    "url": "git+https://github.com/jangrott/nodeschool_io-exercises.git"
   },
   "keywords": [
     "node",
