--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "/",
   "dependencies": {
     "bl": "^1.1.2",
-    "strftime": "^0.9.2"
+    "strftime": "^0.9.2",
+    "through2-map": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
